Fix: production database config for Render deployment (use DATABASE_URL)

--- a/config/database.yml
+++ b/config/database.yml
@@ -79,20 +79,4 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: voidfiles_production
-    username: voidfiles
-    password: <%= ENV["VOIDFILES_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: voidfiles_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: voidfiles_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: voidfiles_production_cable
-    migrations_paths: db/cable_migrate
+  url: <%= ENV["DATABASE_URL"] %>
