--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,11 @@ test:
 production:
   url: <%= ENV["DATABASE_URL"] %>
 
+queue:
+  url: <%= ENV["DATABASE_URL"] %>
+
 cable:
+  url: <%= ENV["DATABASE_URL"] %>
+
+cache:
   url: <%= ENV["DATABASE_URL"] %>
