Aktualisiere config/database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,10 +82,14 @@ production:
   url: <%= ENV["DATABASE_URL"] %>
 
   queue:
-  url: <%= ENV["DATABASE_URL"] %>
+    url: <%= ENV["DATABASE_URL"] %>
 
   cable:
-  url: <%= ENV["DATABASE_URL"] %>
+    url: <%= ENV["DATABASE_URL"] %>
 
 cache:
+  url: <%= ENV["DATABASE_URL"] %>
+
+# Top-Level-Block für maximale Kompatibilität
+cable:
   url: <%= ENV["DATABASE_URL"] %>
