--- a/config/database.yml
+++ b/config/database.yml
@@ -79,11 +79,10 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  url: <%= ENV["DATABASE_URL"] %>
-
+  primary:
+    url: <%= ENV["DATABASE_URL"] %>
   queue:
     url: <%= ENV["DATABASE_URL"] %>
-
   cable:
     url: <%= ENV["DATABASE_URL"] %>
 
