--- a/config/database.yml
+++ b/config/database.yml
@@ -80,15 +80,20 @@ test:
 #
 production:
   primary:
+    <<: *default
     url: <%= ENV["DATABASE_URL"] %>
   queue:
+    <<: *default
     url: <%= ENV["DATABASE_URL"] %>
   cable:
+    <<: *default
     url: <%= ENV["DATABASE_URL"] %>
 
 cache:
+  <<: *default
   url: <%= ENV["DATABASE_URL"] %>
 
 # Top-Level-Block für maximale Kompatibilität
 cable:
+  <<: *default
   url: <%= ENV["DATABASE_URL"] %>
